# ACS-Final-Proyect-Option-2

./: .env.example  Dockerfile.backend  Dockerfile.frontend  Dockerfile.tests  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
backend/: main.py  product_management.db  pyproject.toml  requirements.txt
backend/db/: database.py
backend/models/: models.py
backend/routers/: auth.py  products.py  users.py
backend/schemas/: schemas.py
backend/tests/: conftest.py  pytest.ini  test_auth.py  test_health.py  test_products.py  test_users.py
src/: App.tsx  config.ts  vite-env.d.ts
src/components/: Footer.tsx  Navbar.tsx  ProductCard.tsx
src/components/ui/: Alert.tsx  Button.tsx  Card.tsx  Input.tsx
src/context/: AuthContext.tsx
src/layouts/: AuthLayout.tsx  MainLayout.tsx
src/pages/: CreateProduct.tsx  EditProduct.tsx  Home.tsx  Login.tsx  NotFound.tsx  ProductDetail.tsx  Products.tsx  Profile.tsx  Register.tsx
src/services/: productService.ts
src/utils/: formatters.ts
